--- a/views/ms.ejs
+++ b/views/ms.ejs
@@ -1,64 +1,4 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>mission statement</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <!-- styles -->
-  <link rel="stylesheet" href="assetsm/css/fancybox/jquery.fancybox.css">
-  <link href="assetsm/css/bootstrap.css" rel="stylesheet" />
-  <link href="assetsm/css/bootstrap-theme.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assetsm/css/slippry.css">
-  <link href="assetsm/css/style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assetsm/color/default.css">
-            <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
-  <!-- =======================================================
-    Theme Name: Groovin
-    Theme URL: https://bootstrapmade.com/groovin-free-bootstrap-theme/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
-  <script src="assetsm/js/modernizr.custom.js"></script>
-</head>
-
-<body>
-  <header>
-
-    <div id="navigation" class="navbar navbar-inverse navbar-fixed-top default" style="background-color:white; color:black;"role="navigation">
-      <div class="container">
-
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-         <a class="navbar-brand " style="  padding: 0 15px;
-  height: 80px;
-  line-height: 80px; font-family: 'Great Vibes', cursive; font-size:30px; font-weight:900; color:black;" href="/"><span style="color:#F08080;">Elite </span><span>Consorts</span></a>
-        </div>
-
-        <div class="navigation">
-          <div class="collapse navbar-collapse" style="color:black;" id="bs-example-navbar-collapse-1">
-            <nav>
-              <ul class="nav navbar-nav navbar-right" >
-                <li class="current"><a href="/">Home</a></li>
-                <li><a href="/users/login">LogIn</a></li>
-                <li><a href="/userprofiles/new">SignUp</a></li>
-              </ul>
-            </nav>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-
-      </div>
-    </div>
-
-  </header>
+<% include partials/header3%>
   <!-- section intro -->
   <section id="intro">
     <ul id="slippry-slider">
