--- a/views/sugarbabbies.ejs
+++ b/views/sugarbabbies.ejs
@@ -1,5 +1,33 @@
-<% include partials/header%>
-<body>
+ <!-- Bootstrap -->
+  <link href="assets1/css/bootstrap.css" rel="stylesheet">
+  <link href="assets1/css/bootstrap-theme.css" rel="stylesheet">
+ 
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+  <!-- =======================================================
+    Theme Name: Siimple
+    Theme URL: https://bootstrapmade.com/free-bootstrap-landing-page/
+    Author: BootstrapMade
+    Author URL: https://bootstrapmade.com
+  ======================================================= -->
+</head>
+
+<body style="font-family: 'Lato', sans-serif;  background-color:	#00000;">
+
+  <!-- Fixed navbar -->
+    
+  <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#FFFFFF;   ">
+    
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" style="  padding: 0 15px;
+  height: 80px;
+  line-height: 80px; font-family: 'Great Vibes'; font-size:30px; font-weight:900; color:black;" href="/">
+              <span style="color:#F08080;">Elite </span><span style="color:#000000;">Consorts</span></a>
+        </div>
+   
+  
+    </div>
+</nav>
 
   <div id="header">
     <div class="container">
