--- a/views/sugardaddies.ejs
+++ b/views/sugardaddies.ejs
@@ -9,14 +9,13 @@
   <meta name="author" content="">
 
   <title>Sugar Daddy</title>
-
+    
+    
   <!-- Bootstrap -->
   <link href="assets1/css/bootstrap.css" rel="stylesheet">
   <link href="assets1/css/bootstrap-theme.css" rel="stylesheet">
-
-  <!-- siimple style -->
-  <link href="assets1/css/style.css" rel="stylesheet">
-
+ 
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
   <!-- =======================================================
     Theme Name: Siimple
     Theme URL: https://bootstrapmade.com/free-bootstrap-landing-page/
@@ -25,28 +24,25 @@
   ======================================================= -->
 </head>
 
-<body>
+<body style="font-family: 'Lato', sans-serif;  background-color:	#00000;">
 
   <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="/">EliteConsorts</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/userprofiles/new">Sign up</a></li>
-          <li><a href="/users/login">Sign in</a></li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
+    
+  <nav class="navbar navbar-default navbar-fixed-top" style=" background-color:	#FFFFFF;   ">
+    
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" style="  padding: 0 15px;
+  height: 80px;
+  line-height: 80px; font-family: 'Great Vibes'; font-size:30px; font-weight:900; color:black;" href="/">
+              <span style="color:#F08080;">Elite </span><span style="color:#000000;">Consorts</span></a>
+        </div>
+   
+  
     </div>
-  </div>
+</nav>
+      <!--/.nav-collapse -->
+
 
   <div id="header">
     <div class="container">
