--- a/views/newreg.ejs
+++ b/views/newreg.ejs
@@ -121,6 +121,17 @@
             </select>
             
      </div>
+      <div  id="pac-card">
+      <div>
+
+
+      </div>
+      <div class="ui form-group" id="pac-container">
+        <input class="form-control" id="pac-input" type="text" name="address"
+            placeholder="Enter a location">
+      </div>
+    </div>
+
          
  
     <button class="btn btn-md btn-default btn-block">
@@ -132,4 +143,86 @@
 <a class="ui  orange button" style="margin:10px 0" href="/userprofiles/new"> Go Back</a>
 </div>
 </div>
+
+    <script>
+      // This example requires the Places library. Include the libraries=places
+      // parameter when you first load the API. For example:
+      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
+
+      function initMap() {
+
+        var card = document.getElementById('pac-card');
+        var input = document.getElementById('pac-input');
+        var types = document.getElementById('type-selector');
+         var strictBounds = document.getElementById('strict-bounds-selector');
+
+        var autocomplete = new google.maps.places.Autocomplete(input);
+        //
+        // // Bind the map's bounds (viewport) property to the autocomplete object,
+        // // so that the autocomplete requests use the current map bounds for the
+        // // bounds option in the request.
+        // autocomplete.bindTo('bounds', map);
+        //
+        // // Set the data fields to return when the user selects a place.
+        autocomplete.setFields(
+            ['address_components', 'geometry', 'icon', 'name']);
+
+        // var infowindow = new google.maps.InfoWindow();
+        // var infowindowContent = document.getElementById('infowindow-content');
+        // infowindow.setContent(infowindowContent);
+        // var marker = new google.maps.Marker({
+        //   map: map,
+        //   anchorPoint: new google.maps.Point(0, -29)
+        // });
+
+        autocomplete.addListener('place_changed', function() {
+          //infowindow.close();
+         // marker.setVisible(false);
+          var place = autocomplete.getPlace();
+          if (!place.geometry) {
+            // User entered the name of a Place that was not suggested and
+            // pressed the Enter key, or the Place Details request failed.
+            window.alert("No details available for input: '" + place.name + "'");
+            return;
+          }
+
+          // If the place has a geometry, then present it on a map.
+        
+        //  marker.setPosition(place.geometry.location);
+        //  marker.setVisible(true);
+
+          var address = '';
+          if (place.address_components) {
+            address = [
+              (place.address_components[0] && place.address_components[0].short_name || ''),
+              (place.address_components[1] && place.address_components[1].short_name || ''),
+              (place.address_components[2] && place.address_components[2].short_name || '')
+            ].join(' ');
+            
+          }
+          if(place.geometry){
+              var a=place.geometry.location.lat
+              console.log(a)
+              
+          }
+
+          
+        });
+
+        // Sets a listener on a radio button to change the filter type on Places
+        // Autocomplete.
+     
+     
+
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpWecUYIcQPOSbNqqH3sI10xJaeOg0GMk&libraries=places&callback=initMap"
+        async defer></script>
+
+
+
+
+
+
 <% include partials/footer1 %>
+
