--- a/views/pp.ejs
+++ b/views/pp.ejs
@@ -1,52 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Privacy Policy</title>
-
-  <!-- Bootstrap -->
-  <link href="assetsp/css/bootstrap.css" rel="stylesheet">
-  <link href="assetsp/css/bootstrap-theme.css" rel="stylesheet">
-
-  <!-- siimple style -->
-  <link href="assetsp/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: Siimple
-    Theme URL: https://bootstrapmade.com/free-bootstrap-landing-page/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
-</head>
-
-<body>
-
-  <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="/">EliteConsorts</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-       <li><a href="/userprofiles/new">Sign up</a></li>
-          <li><a href="/users/login">Sign in</a></li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
-    </div>
-  </div>
+<% include partials/header3%>
 
   <div id="header">
     <div class="container">
@@ -93,7 +45,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="assetsp/js/bootstrap.min.js"></script>
-
+ <% include partials/footer1 %>
 </body>
 
 </html>
